# cpp-20-2025-06-23

./: README.md  extra.txt
_exercises/ex-compare/: comparisons.cpp
_exercises/ex-concepts/: concepts_and_constraints.cpp
_exercises/ex-ranges/: ranges.cpp
compare/: comparisons.cpp  integer_comparisons.cpp
compile-time-programming/: compile_time_programming.cpp
concepts/: concept_subsumation.cpp  concepts_and_constraints.cpp
core-features/: core_features.cpp
coroutines/: coroutines.cpp
modules/: CMakeLists.txt
modules/.devcontainer/: Dockerfile
modules/import-std/drawing-app/: CMakeLists.txt
modules/import-std/import-std-lib/: CMakeLists.txt
modules/import-std/modules-4/: CMakeLists.txt
ranges/: ranges_and_views.cpp
stdlib-features/: std_lib_cpp20.cpp
templates/: templates.cpp
